# OptimizationAlgorithm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bash  third_party.cmake
include/: eigen_traits.hpp  mat.hpp  meta.hpp  numtraits.hpp  utils.h  var.hpp  vectortraits.hpp
src/: common.cc  common.h  constraintsolver.cc  constraintsolver.h  example.cc  example1.cc  example2.cc  example3.cc  unconstraintsolver.cc  unconstraintsolver.h
